packages/test-dev-server/tests/fixtures/invalidation-multiple-parent/src/parent2-child.js
export const value = 'parent2-child';
